docs/microservices/MS14-AUDIT/kubernetes/audit-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms14-audit-api
  namespace: zenia
  labels:
    app: ms14-audit-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms14-audit-api
  template:
    metadata:
      labels:
        app: ms14-audit-api
    spec:
      containers:
      - name: audit-api
        image: ghcr.io/interzen/ms14-audit-api:1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "2Gi"
      automountServiceAccountToken: false
